modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Our Skills
             </h5>
             <h5>
                 <span>Email</span> <br>
-                mclotkulture@gmail.com
+               <i><a href="mclotkulture@gmail.com"></a>mclotkulture@gmail.com</i>
             </h5>
             <h5>
                 <span>WhatsApp</span><br>
@@ -222,7 +222,7 @@ Our Skills
                 <input type="email" placeholder="Email Address">
                 <input type="subject" placeholder="Subject" required>
                 <textarea name="" id="" cols="30" rows="10" placeholder="How can We Make Your Day Better!" required></textarea>
-               <button> <input type="submit" class="submit" placeholder="Send Message"></button>
+               <input type="submit" class="submit" placeholder="Send Message">
                 <!-- <button>submit</button> -->
             </form>
         </div>
