modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -40,58 +40,139 @@
 <section class="about-us" id="about">
 <h1>About Us</h1>
 <div class="btn">
-    <button class="do">
+    <button class="do" id="button1">
         What we Do
     </button>
-    <button class="do">
+    <button class="do" id="button2">
         Our Vision
     </button>
-    <button class="do">
+    <button class="do" id="button3">
 Our Skills
     </button>
 </div>
-<div class="text-about">
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Ducimus ipsam dolorem quaerat voluptatum voluptatem assumenda distinctio doloremque. Corporis eius ad tenetur pariatur ipsam tempore quo,<br> nesciunt vel provident, iusto dignissimos!
-    </p>
+<div class="div1" id="div1">
+    <div class="text-about">
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Ducimus ipsam dolorem quaerat voluptatum voluptatem assumenda distinctio doloremque. Corporis eius ad tenetur pariatur ipsam tempore quo,<br> nesciunt vel provident, iusto dignissimos!
+        </p>
+    </div>
+    <div class="about-container">
+        <div class="about-box-1">
+            <a href="#"><i class='bx bxl-sketch'></i></a>
+            <h2>
+                Unique Designs
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
+            </p>
+        </div>
+        <div class="about-box-1">
+            <a href="#"><i class='bx bx-rocket' ></i></a>
+            <h2>
+                Service Innovation
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
+            </p>
+        </div>
+        <div class="about-box-1">
+            <a href="#"><i class='bx bx-tv' ></i></a>
+            <h2>
+                Digital Strategy
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
+            </p>
+        </div>
+        <div class="about-box-1 last" >
+            <a href="#"><i class='bx bx-pencil' ></i></a>
+            <h2>
+                Brand Identity
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
+            </p>
+        </div>
+    </div>
 </div>
-<div class="about-container">
-    <div class="about-box-1">
-        <a href="#"><i class='bx bxl-sketch'></i></a>
+
+<div class="div2" id="div2">
+  <div class="vision">
+    <div class="vis">
+       
+    <div class="intro-vision">
+        <h1>
+            OUR VISION
+        </h1>
+
         <h2>
-            Unique Designs
+            Lorem ipsum dolor sit amet<br> consectetur adipisicing elit. 
         </h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
-        </p>
+      </div>   
+
     </div>
-    <div class="about-box-1">
-        <a href="#"><i class='bx bx-rocket' ></i></a>
-        <h2>
-            Service Innovation
-        </h2>
+    
+       <div class="text-vision">
+        <a>
+            <i class='bx bxs-quote-alt-left'></i>
+        </a>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
+            Lorem ipsum dolor sit<br> amet consectetur adipisicing elit.<br> Id quam, facere hic ducimus voluptatem cum odio<br> ex modi obcaecati esse eum amet at soluta quidem<br> quo iste distinctio dolor dolore.
         </p>
-    </div>
-    <div class="about-box-1">
-        <a href="#"><i class='bx bx-tv' ></i></a>
-        <h2>
-            Digital Strategy
-        </h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
-        </p>
-    </div>
-    <div class="about-box-1 last" >
-        <a href="#"><i class='bx bx-pencil' ></i></a>
-        <h2>
-            Brand Identity
-        </h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Rem repellendus odit eaque totam officia ab<br> molestiae optio quos nulla.<br> Vel, fugit quam.
-        </p>
-    </div>
+       </div>
+  </div>
+</div>
+
+<div class="div3" id="div3">
+    <div class="skills_1">
+        <div class="responsive-container-block bigContainer">
+          <div class="responsive-container-block Container">
+            <p class="text-blk subHeading">
+              Sit amet massa vitae tortor condimentum
+            </p>
+            <p class="text-blk heading">
+              Lorem ipsum dolor sit ipsum dolor sit
+              <br>
+              amet, consectetur
+            </p>
+            <a class="getInTouch" href="#">
+              Get in touch
+            </a>
+            <div class="responsive-container-block cardContainer">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-4 wk-tab-6 wk-mobile-12">
+                <div class="card">
+                  <p class="text-blk stats">
+                    75K+
+                  </p>
+                  <p class="text-blk cardHeading">
+                    Lorem ipsum dolor sit amet, consectetur adip
+                  </p>
+                </div>
+              </div>
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-4 wk-tab-6 wk-mobile-12">
+                <div class="card">
+                  <p class="text-blk stats">
+                    95%
+                  </p>
+                  <p class="text-blk cardHeading">
+                    Lorem ipsum dolor sit amet, consectetur adip
+                  </p>
+                </div>
+              </div>
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-4 wk-tab-6 wk-mobile-12">
+                <div class="card">
+                  <p class="text-blk stats">
+                    4.8
+                  </p>
+                  <p class="text-blk cardHeading">
+                    Lorem ipsum dolor sit amet, consectetur adip
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
 
 </section>
@@ -294,6 +375,49 @@ Our Skills
   })
 }
 )
+
+      // Get references to the divs and buttons
+    const div1 = document.getElementById('div1');
+    const div2 = document.getElementById('div2');
+    const div3 = document.getElementById('div3');
+    const button1 = document.getElementById('button1');
+    const button2 = document.getElementById('button2');
+    const button3 = document.getElementById('button3');
+
+
+    const selectedDiv = localStorage.getItem('selectedDiv');
+
+        // Set the initial state based on the stored selection
+        if (selectedDiv === 'div1') {
+            div1.style.display = 'block'; // Show div1
+            div2.style.display = 'none'; // Hide div2
+        } else if (selectedDiv === 'div2') {
+            div1.style.display = 'none'; // Hide div1
+            div2.style.display = 'block'; // Show div2
+        }
+        else if (selectedDiv === 'div3') {
+            div1.style.display = 'none'; // Hide div1
+            div2.style.display = 'block'; // Show div2
+        }
+
+        // Add click event listeners to the buttons
+        button1.addEventListener('click', function () {
+            div1.style.display = 'block';
+            div2.style.display = 'none';
+            div3.style.display = 'none';
+        });
+
+        button2.addEventListener('click', function () {
+            div1.style.display = 'none';
+            div3.style.display = 'none';
+            div2.style.display = 'block';
+        });
+
+        button3.addEventListener('click', function () {
+            div1.style.display = 'none';
+            div2.style.display = 'none';
+            div3.style.display = 'block'
+        });
 
     </script>
 </body>
